# gmail-mcp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.githooks/: pre-push
configs/: config.py
docs/: 7Cs-of-effective-communication.md  directive-for-AI-assisted-email-drafting.md  email-templates.md  example-prompts.md  gcp-setup.md  prompt-examples.md
src/gmail_mcp_server/: __init__.py  server.py
src/gmail_mcp_server/configs/: __init__.py  config.py  settings.toml
src/gmail_mcp_server/middlewares/: __init__.py  oauth_middleware.py
src/gmail_mcp_server/prompts/: __init__.py  draft_professional_reply.py  schedule_meeting_reply.py  suggest_template.py
src/gmail_mcp_server/resources/: __init__.py  calendar_availability.py  email_guidelines.py
src/gmail_mcp_server/routes/: __init__.py  auth_handler.py  health_check_handler.py  oauth_protected_endpoint_handler.py
src/gmail_mcp_server/services/: __init__.py  gmail_api_service.py  (+2 more)
src/mcp_server/: server.py
tests/: __init__.py  conftest.py  test_server.py
tests/prompts/: __init__.py  test_prompts.py
tests/resources/: test_calendar_availability.py  test_email_guidelines.py
tests/services/: test_gmail_api_service.py  test_google_oauth_credentials.py  test_google_workspace_service.py
tests/tools/: __init__.py  test_create_draft_reply.py  test_get_unread_emails.py
tests/utils/: __init__.py  test_build_threading_headers.py  test_ensure_reply_subject.py  test_format_email_for_display.py  test_get_email_body.py  test_get_header_value.py
(+21 files in other folders)
