[project]
name = "gmail-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dynaconf>=3.2.12",
    "mcp>=1.23.1",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.149.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",
    "itsdangerous>=2.2.0",
]
